--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.es.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.es.xlf
@@ -112,9 +112,9 @@
         <target state="translated">Tipo contenedor</target>
         <note />
       </trans-unit>
-      <trans-unit id="Current_Document">
-        <source>Current Document</source>
-        <target state="new">Current Document</target>
+      <trans-unit id="Current_document">
+        <source>Current document</source>
+        <target state="new">Current document</target>
         <note />
       </trans-unit>
       <trans-unit id="Element_is_not_valid">
@@ -122,9 +122,9 @@
         <target state="translated">El elemento no es válido.</target>
         <note />
       </trans-unit>
-      <trans-unit id="Entire_Solution">
-        <source>Entire Solution</source>
-        <target state="new">Entire Solution</target>
+      <trans-unit id="Entire_solution">
+        <source>Entire solution</source>
+        <target state="new">Entire solution</target>
         <note />
       </trans-unit>
       <trans-unit id="Evaluating_0_tasks_in_queue">
@@ -372,9 +372,9 @@
         <target state="translated">Miembros no públicos</target>
         <note />
       </trans-unit>
-      <trans-unit id="Open_Documents_and_Projects">
-        <source>Open Documents and Projects</source>
-        <target state="new">Open Documents and Projects</target>
+      <trans-unit id="Open_documents">
+        <source>Open documents</source>
+        <target state="new">Open documents</target>
         <note />
       </trans-unit>
       <trans-unit id="Parameter_preferences_colon">
