--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.ja.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.ja.xlf
@@ -102,14 +102,14 @@
         <target state="translated">依存を計算しています...</target>
         <note />
       </trans-unit>
+      <trans-unit id="Call_site_value">
+        <source>Call site value:</source>
+        <target state="new">Call site value:</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Callsite">
         <source>Call site</source>
         <target state="new">Call site</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Callsite_Value">
-        <source>Call site value:</source>
-        <target state="new">Call site value:</target>
         <note />
       </trans-unit>
       <trans-unit id="ChangeSignature_NewParameterIndicator">
